assets/css/pages/home.css
main {
  display: flex;
  flex-direction: column;
  padding-top: var(--spacing-xxl);
}

main section {
  margin-bottom: var(--spacing-xxl);
}

main section:first-of-type {
  margin-top: calc(-1 * var(--spacing-xxl));
}

main section:last-of-type {
  margin-bottom: 0;
}

main section h2 {
  margin-top: 0;
}

.banner {
  display: flex;
  height: auto;
  min-height: 30vh;
  position: relative;
  overflow: hidden;

  /* prevents .banner-text from overlapping with primary-nav dropdown on wide viewport widths */
  isolation: isolate;
  --title-max-font-size: 6rem;
  --title-min-font-size: var(--text-size-h1);
  --subtitle-max-font-size: 2.6rem;
  --subtitle-min-font-size: 1.6rem;
}

.banner-text,
:root[data-theme="light"] .banner-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-md);
  color: var(--text-color);
  text-align: center;
  padding: var(--spacing-lg) var(--spacing-mmd) var(--spacing-xxl);
  margin: auto;
  line-height: 1.1;
  text-shadow:
    -1px -1px 0 var(--color-white),
    1px -1px 0 var(--color-white),
    -1px 1px 0 var(--color-white),
    1px 1px 0 var(--color-white);
  z-index: 1;
}

@media (prefers-color-scheme: dark) {
  .banner-text {
    color: var(--color-white);
    text-shadow:
      -1px -1px 0 var(--color-gray-90),
      1px -1px 0 var(--color-gray-90),
      -1px 1px 0 var(--color-gray-90),
      1px 1px 0 var(--color-gray-90);
  }
}

/* NOTE: duplicate code as above media query block */
:root[data-theme="dark"] .banner-text {
  color: var(--color-white);
  text-shadow:
    -1px -1px 0 var(--color-gray-90),
    1px -1px 0 var(--color-gray-90),
    -1px 1px 0 var(--color-gray-90),
    1px 1px 0 var(--color-gray-90);
}

.banner-text h1 {
  /* credit: https://fluid.style/type?min=3.8125&max=6&min-bp=28&max-bp=137.5&unit=%22rem%22 */
  font-size: clamp(
    var(--title-min-font-size),
    3.253rem + 1.998vw,
    var(--title-max-font-size)
  );
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  overflow-wrap: anywhere;
  margin-bottom: 0;
}

.banner-text p {
  /* credit: https://fluid.style/type?min=1.6&max=2.6&min-bp=28&max-bp=137.5&unit=%22rem%22 */
  font-size: clamp(
    var(--subtitle-min-font-size),
    1.344rem + 0.913vw,
    var(--subtitle-max-font-size)
  );
  font-weight: bold;
  max-width: 22ch;
}

@media screen and (width >= 600px) {
  .banner-text p {
    max-width: initial;
  }
}

.cards-container {
  --card-margin: var(--spacing-mmd);
  display: flex;
  flex-direction: column;
  gap: var(--spacing-mmd);
  margin-bottom: 0;
}

@media screen and (width >= 900px) {
  .cards-container {
    --card-margin: var(--spacing-md);
    flex-direction: row;
    gap: var(--spacing-xl);
  }
}

.card {
  flex-grow: 1;
  flex-basis: content;
}

.card .text {
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: var(--spacing-mmd) 0;
}

.card .text > * + * {
  margin-top: var(--card-margin);
}

.card .text > *:first-child {
  margin: 0;
}

.card .text > *:last-child {
  margin-top: auto;
  min-width: 12rem;
}

.card .text > *:nth-last-child(2) {
  margin-bottom: var(--card-margin);
}

.card h3 {
  font-size: var(--text-size-h4);
}

